<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_id_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="bottom|center"
        android:paddingBottom="8dp"
        android:text="@string/question_id_text"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <include layout="@layout/time_view"/>
    </RelativeLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:id="@+id/question_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_weight="0.5"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:gravity="center_horizontal"
        android:text="@string/question_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/option_one_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/option_one"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_margin="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:background="@drawable/button_background" />

        <Button
            android:id="@+id/option_two_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/option_two"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_margin="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/option_three_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            tools:text="Hey Guys this is an Answer"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_margin="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:background="@drawable/button_background"/>

    </LinearLayout>

</LinearLayout>