<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp">

    <RelativeLayout
        android:id="@+id/image_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/indicator_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:civ_border_width="4dp"
            android:padding="1dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/you_passed"
        android:paddingTop="16dp"
        android:layout_below="@id/image_holder"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center" />


    <TextView
        android:id="@+id/status_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/passed_text"
        android:layout_below="@id/status"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:gravity="top|center"/>

    <RelativeLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/status_comment">

        <Button
            android:id="@+id/continue_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:textAppearanceMedium"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="@string/next_question"/>

        <RelativeLayout
            android:id="@+id/time_out_options"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/quit_test_button"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/quit_assessment"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:textAppearanceMedium"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_alignEnd="@+id/textView"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_no"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_above="@id/quit_test_button"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:paddingBottom="8dp"
                android:id="@+id/textView" />

            <Button
                android:id="@+id/next_question"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/next_question"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:textAppearanceMedium"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_alignTop="@id/quit_test_button"
                android:layout_alignBottom="@id/quit_test_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_yes"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_alignParentEnd="true"
                android:paddingEnd="36dp"
                android:paddingStart="36dp"
                android:paddingBottom="8dp"
                android:layout_above="@id/next_question"/>
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>