<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.example.android.photography.views.TimeLeftView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:radius="75dp"
        app:value="60"/>

    <TextView
        android:id="@+id/time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="52sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/time_view"
        app:layout_constraintLeft_toLeftOf="@+id/time_view"
        app:layout_constraintRight_toRightOf="@+id/time_view"
        app:layout_constraintTop_toTopOf="@+id/time_view"
        tools:text="0 : 58"/>

</android.support.constraint.ConstraintLayout>